[tool.poetry]
name = "monitor"
version = "0.1.0"
description = "RESTful web that monitorizes and manages agents."
authors = ["Pablo González Rubio <pjgr2000@gmail.com>"]
repository = "https://github.com/n0nuser/monitor"
license = "GPL-3.0-or-later"
packages = [
    { include = "monitor/"},
    { include = "monitor/**/*.py" },
]

[tool.poetry.dependencies]
Unipath = "^1.1"
pytz = "^2021.3"
asgiref = "^3.5.0"
autopep8 = "^1.6.0"
sqlparse = "^0.4.2"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
requests = "^2.27.1"
django = ">=4.0,<5.0"
whitenoise = "^6.0.0"
pymemcache = "^3.5.2"
pycodestyle = "^2.8.0"
python = ">=3.8,<4.0.0"
django-environ = "^0.8.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-import-export = "^2.7.1"
djangorestframework = "^3.13.1"
asgiref = "^3.5.0"
autopep8 = "^1.6.0"
pycodestyle = "^2.8.0"
pytz = "^2021.3"
sqlparse = "^0.4.2"
Unipath = "^1.1"
dj-database-url = "^0.5.0"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
# pytest = "^7.0.0"
# tox = "^3.24.5"
django-import-export = "^2.7.1"
beautifulsoup4 = "^4.10.0"
django-pygments-renderer = "^0.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
kolo = "^1.4.0"
django-debug-toolbar = "^3.3.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
