[tool.poetry]
name = "monitor"
version = "0.1.0"
description = "Web app that monitorizes and manages agents."
authors = ["Pablo González Rubio <pjgr2000@gmail.com>"]
repository = "https://github.com/n0nuser/monitor"
license = "GPL-3.0-or-later"
packages = [
    { include = "monitor/"},
    { include = "monitor/**/*.py" },
]

[tool.poetry.dependencies]
Unipath = "^1.1"
asgiref = "^3.5.0"
autopep8 = "^1.6.0"
dj-database-url = "^1.0.0"
django = ">=4.0,<5.0"
django-environ = "^0.9.0"
django-import-export = "^2.7.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
pycodestyle = "^2.8.0"
python = ">=3.8,<4.0.0"
python-decouple = "^3.6"
pytz = "^2021.3"
requests = "^2.27.1"
sqlparse = "^0.4.2"
uvicorn = "^0.17.6"
whitenoise = "^6.0.0"
redis = "^4.3.3"
rq = "^1.10.1"
django-rq = "^2.5.1"
rq-scheduler = "^0.11.0"
django-crispy-forms = "^1.14.0"
django-minify-html = "^1.3.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
pygraphviz = "^1.9"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
